--- a/src/App.css
+++ b/src/App.css
@@ -2,43 +2,42 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .button {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.pageButton {
   width: 10rem;
+}
+
+
+.barButton {
+  width: 15rem;
+}
+
+.accordion {
+  margin-top: 2rem;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+.barImage {
+  width: 90%;
+  height: 15rem;
+}
+
+h4 {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+h5 {
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
 }
