--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,8 @@
 }
 
 .pageButton {
-  width: 10rem;
-}
-
-
-.barButton {
-  width: 15rem;
+  width: 20%;
+  min-width: 10rem;
 }
 
 .accordion {
@@ -27,17 +23,30 @@
   margin-right: 15%;
 }
 
-.barImage {
-  width: 90%;
-  height: 15rem;
-}
-
 h4 {
   margin-top: 1rem;
   margin-bottom: 2rem;
 }
 
 h5 {
-  margin-top: 3rem;
+  margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.barContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.barContainerRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.barContainerColumn {
+  flex: 1;
+}
+
+.barImage {
+  max-height: 25rem;
 }
