--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import '/node_modules/bootstrap/dist/css/bootstrap.min.css';
 
+html, body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,7 +13,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.footer {
+  flex-shrink: 0;
+  text-align: center;
+  margin-bottom: 1rem;
 }
